# hybridbrep

./: .gitignore  CMakeLists.txt  environment.yml  index.html  readme.md  setup.py
cpp/: hybrid_part.cpp  hybrid_part.h  hybridbrep.cpp  implicit_part.cpp  implicit_part.h
hybridbrep/: __init__.py  classification.py  grid_nn.py  hybridpart.py  implicit.py  part_embedding.py  reconstruction.py  rendering.py  segmentation.py  train_uv_edges.py  uvgrid.py  weighted_chamfer_distance.py
notebooks/: brep_conversion.ipynb  dev_hybrid_part.ipynb  figures.ipynb  gradient_cube.ipynb  gradient_optimization.ipynb  plotting.py  precode_data.ipynb  precoded_training.py  reconstruction_ablations.ipynb  render_shape.py  rendering.py  reproducibility.py  scratch.ipynb  test_hybrid_part_training.ipynb  train_latent_space.py  util.py
scripts/: train_clr.py
